2003/06/06 23:55 muppetman

	* GObject.xs, GType.xs: copy scalars that will be stored, don't just
	mess with the reference count, for along that way lies madness.

	* MANIFEST: added some key missing files (AUTHORS, LICENSE, ChangeLog)

	* Glib.pm: bumped version number to 0.22 for public release

2003/06/01 16:16 muppetman

	applied patch from Marc Lehmann (pcg at goof dot com)

	* GObject.xs: allow $object->get and $object->set to work on
	multiple properties.

	* Glib/GClosure.xs: don't try to PERL_SET_CONTEXT on non-threaded perls

2003/05/30 23:55 muppetman (while watching zep at the albert hall)

	* GType.xs: initial values, try to avoid warnings and bugs

	* AUTHORS, GClosure.xs, gperl.h, typemap: applied more patches from
	Brett Kosinski; added typemaps for gint64 and guint64, ensure that
	closures and callbacks are executed by the interpreters that created
	them.

2003/05/29 15:51 muppetman

	* GType.xs, gperl.h: applied patch (with liberal modifications) from
	Brett Kosinski (brettk at frodo dot dyn dot gno dot org) to add 
	gperl_try_convert_flag, like the existing gperl_try_convert_enum.
	rearranged things to avoid copied code, and use the _try_ versions
	as the actual workhorses.  added a little more commentary, too.

2003/05/26 04:28 muppetman

	* Glib.pm: bumped version for development release

	* GBoxed.xs: ensure that the scalar from which we try to extract
	a boxed pointer is actually a reference.

2003/05/22 10:30 muppetman

	* AUTHORS, LICENSE every other file: in every file in the project 
	added a header pointing to the new AUTHORS and LICENSE files.
	changed the license clause in the docs from "same as perl" to GPL.

2003/05/18 14:00 muppetman

	* ChangeLog: since breaking the monolithic build into pieces, 
	ChangeLog entries for Glib will be in here.  i've included the 
	contents of the toplevel log up to this point for history.

	* MANIFEST: updated for proper make dist

	* Glib.pm: changed version number

	* README: updated
