@@ -43,7 +43,9 @@ const guchar *	T_PV
 gfloat		T_FLOAT
 gdouble		T_DOUBLE
 
-GObject *	T_G_TYPE_OBJECT
+GObject*	T_G_TYPE_OBJECT
+GObject_ornull*	T_G_TYPE_OBJECT_ORNULL
+GObject_noinc*	T_G_TYPE_OBJECT_NOINC
 
 GIOCondition	T_G_TYPE_IO_CONDITION
 
@@ -55,7 +57,10 @@ T_GCHAR
 	$var = ($type)SvPV_nolen ($arg);
 
 T_G_TYPE_OBJECT
-	$var = gperl_get_object ($arg);
+	$var = SvGObject ($arg);
+
+T_G_TYPE_OBJECT_ORNULL
+	$var = SvGObject_ornull ($arg);
 
 T_G_TYPE_IO_CONDITION
 	$var = gperl_convert_flags (G_TYPE_IO_CONDITION, $arg);
@@ -68,7 +73,10 @@ T_GCHAR
 	SvUTF8_on ($arg);
 
 T_G_TYPE_OBJECT
-	$arg = gperl_new_object ($var);
+	$arg = newSVGObject ($var);
+
+T_G_TYPE_OBJECT_NOINC
+	$arg = newSVGObject_noinc ($var);
 
 T_G_TYPE_IO_CONDITION
 	$arg = gperl_convert_back_flags (G_TYPE_IO_CONDITION, $var);
